:sparkles: first commit

--- a/app.json
+++ b/app.json
@@ -5,7 +5,11 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "github-details",
+    "extra": {
+      "githubClientId": "Ov23lib0eVqumFOMqN0K",
+      "githubClientSecret": "d1a1bbef9f0ede57098bfcfb712496869bf1ef28"
+    },
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
