--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-device": "^6.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "^0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -33,13 +36,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
