--- a/package.json
+++ b/package.json
@@ -24,18 +24,20 @@
     "expo-cli": "^6.3.10",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-device": "^6.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-notifications": "^0.28.19",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "native-notify": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
