--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react-native-svg": "^15.8.0",
+    "react-native-web": "^0.19.13",
     "socket.io-client": "^4.8.1",
     "web-push": "^3.6.7"
   },
